# minishell

./: CMakeLists.txt  Makefile  echo  minishell
inc/: data_list.h  execute.h  minishell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h
src/: env.c  ft_free.c  init.c  minishell.c  signals.c
src/built-in/: builtin_utils.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/execute/: builtin.c  execute.c  ft_doc.c  ft_error.c  ft_execute.c  ft_fork.c  ft_redirect.c  util_doc.c
src/libft/: Makefile  ft_calloc.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_memcmp.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_tolower.c  libft.h
src/parser/: change_env.c  change_env_utils.c  isspecial.c  lexer.c  lexer_utils.c  make_argv.c  make_argv_utils.c  parser.c  rm_quote.c  tokenizer.c  tokenizer_utils.c
src/utils/: arr_converter.c  env.c  ft_exit.c  ft_exit_error.c  ft_free.c  ft_strjoin2.c  init.c  signals.c  utils.c
