cmake_minimum_required(VERSION 3.23)
project(minishell C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-I/opt/homebrew/opt/readline/include -L/opt/homebrew/opt/readline/lib -lreadline")

include_directories(src)
include_directories(inc)
include_directories(src/built-in)
include_directories(src/libft)
include_directories(src/parser)
include_directories(src/execute)
include_directories(src/utils)

add_executable(03_minishell
src/minishell.c
src/libft/libft.h
inc/minishell.h
inc/data_list.h
inc/execute.h
        src/libft/ft_bzero.c
        src/libft/ft_calloc.c
src/libft/ft_atoi.c
src/libft/ft_isalnum.c
src/libft/ft_isascii.c
src/libft/ft_isalpha.c
src/libft/ft_isdigit.c
src/libft/ft_itoa.c
src/libft/ft_isprint.c
src/libft/ft_lstnew.c
src/libft/ft_lstadd_back.c
src/libft/ft_lstadd_front.c
src/libft/ft_lstclear.c
src/libft/ft_lstdelone.c
src/libft/ft_lstiter.c
src/libft/ft_lstlast.c
src/libft/ft_lstmap.c
src/libft/ft_lstsize.c
src/libft/ft_memchr.c
src/libft/ft_memcmp.c
src/libft/ft_memcpy.c
src/libft/ft_memmove.c
src/libft/ft_memset.c
src/libft/ft_putnbr_fd.c
src/libft/ft_putendl_fd.c
src/libft/ft_putstr_fd.c
src/libft/ft_split.c
src/libft/ft_strchr.c
src/libft/ft_strdup.c
src/libft/ft_striteri.c
src/libft/ft_strjoin.c
src/libft/ft_putchar_fd.c
src/libft/ft_strlcat.c
src/libft/ft_strlcpy.c
src/libft/ft_strlen.c
src/libft/ft_strmapi.c
src/libft/ft_strncmp.c
src/libft/ft_strnstr.c
src/libft/ft_strrchr.c
src/libft/ft_strtrim.c
src/libft/ft_substr.c
src/libft/ft_tolower.c
src/libft/ft_toupper.c
src/libft/libft.h
src/execute/builtin.c
src/execute/execute.c
src/execute/ft_error.c
src/execute/ft_execute.c
src/execute/ft_fork.c
src/execute/ft_redirect.c
src/built-in/ft_exit.c
src/built-in/ft_export.c
src/built-in/ft_env.c
src/built-in/ft_cd.c
src/built-in/ft_pwd.c
src/built-in/ft_echo.c
src/built-in/ft_unset.c
src/built-in/builtin_utils.c
src/parser/change_env.c
src/parser/change_env_utils.c
src/parser/isspecial.c
src/parser/lexer.c
src/parser/lexer_utils.c
src/parser/make_argv.c
src/parser/make_argv_utils.c
src/parser/parser.c
src/parser/rm_quote.c
src/parser/tokenizer.c
src/parser/tokenizer_utils.c
src/utils/env.c
src/utils/arr_converter.c
src/utils/ft_exit_error.c
src/utils/ft_free.c
src/utils/ft_strjoin2.c
src/utils/init.c
src/utils/signals.c
src/utils/utils.c
)
